--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ header {
     margin-right: 100px;
     margin-left: 100px;
 }
+.locations {
+    height: 100vh;
+}
 
 .locationtext{
     color: white;
@@ -92,13 +95,16 @@ header {
     margin: 150px auto;
     width: 70%;
     background-color: black;
+    margin-top: 0px;
 }
 .house1img {
-    max-width: 320px;
+    width: 320px;
+    height: 250px;
     float: left;
     margin-right: 15px;
     border: 3px solid white;
     border-radius: 5px;
+   
 }
 .text-box {
     color: White
@@ -114,9 +120,11 @@ font-size: 42px;
     margin: 150px auto;
     width: 70%;
     background-color: black;
+    margin-top: 0px;
 }
 .house2img {
-    max-width: 320px;
+    width: 320px;
+    height: 250px;
     float: left;
     margin-right: 15px;
     border: 3px solid white;
@@ -127,9 +135,11 @@ font-size: 42px;
     margin: 150px auto;
     width: 70%;
     background-color: black;
+    margin-top: 0;
 }
 .house3img {
-    max-width: 320px;
+    width: 320px;
+    height: 250px;
     float: left;
     margin-right: 15px;
     border: 3px solid white;
